# minidrive

client/: CMakeLists.txt
client/include/: client.hpp  terminalNoEcho.hpp
client/src/: client.cpp  main.cpp  terminalNoEcho.cpp
server/: CMakeLists.txt
server/include/: database.hpp  password.hpp  server.hpp  session.hpp
server/src/: database.cpp  main.cpp  password.cpp  server.cpp  session.cpp
shared/: CMakeLists.txt
shared/include/filesystem/: utils.hpp
shared/include/protocol/: codes.hpp  commands.hpp  message.hpp  statuses.hpp
shared/src/filesystem/: utils.cpp
shared/src/protocol/: message.cpp
